# Matcha-TTS

./: .gitignore  create_filelists.py  ljspeech.json  main.py  pyproject.toml  setup_ljspeech.py  synthesis.ipynb
configs/callbacks/: default.yaml
configs/data/: ljspeech.yaml
configs/logger/: tensorboard.yaml
configs/trainer/: cpu.yaml  default.yaml  gpu.yaml
matcha/: app.py  cli.py  train.py
matcha/data/: text_mel_datamodule.py
matcha/hifigan/: models.py  xutils.py
matcha/models/: __init__.py  base_module.py  baselightningmodule.py  matcha_tts.py
matcha/models/components/: decoder.py  text_encoder.py  transformer.py
matcha/onnx/: export.py
matcha/utils/: __init__.py  audio.py  get_durations_from_trained_model.py  instantiators.py  logging_utils.py  model.py  pylogger.py  rich_utils.py  utils.py
